--- a/style.css
+++ b/style.css
@@ -1,40 +1,36 @@
 html {
- background: gray; 
+ background: #363636; 
 }
 
 /* ~~ Top Navigation Bar ~~ */
 header {
-   text-align: right;
-   width: 100% 
+ 
+  width: 100%;
+  color: #4f61ff;
+  background-color: #363636;
 }
  
-
-.navbar {
-	 display:grid;
-  background-color: #352d2f;
+/* .navbar-default {
+	display: grid;
   height: auto;
   width: auto;
-  
 }
 
 .navbar img{
- position: absolute;
+  position: absolute;
   width: 5em;
   height: 5em;
   padding: 5px;
   margin-top: 15px;
- margin-left:10px;
+  margin-left:10px;
 }
 
 .navbar ul {
-	
-	width: auto%;
+	width: auto;
 	height:70px;
   padding: 5px;
   margin: 5px;
   text-align: center;
-  
-  
 }
 
 .navbar li {
@@ -51,38 +47,60 @@ header {
   padding: 5px 15px;
   opacity: 0.7;
 }
-
+*/
 /* centered image */
 
 .centerImage {
   display:grid;
   margin-left: auto;
   margin-right: auto;
-  
 }
 
 article {
   display: grid;
   width: auto;
-   padding: 5px 15px;
+  padding: 5px 15px;
   margin-left: 5px;
   margin-right: 5px;
+}
+
+main {
+  text-align: center;
+  background-color: #363636;
+  color: #ffffff;
+ 
+
 }
 
 aside { 
   display: grid;
-        width:auto;
-   padding: 5px 15px;
-    margin-left: 5px;
+  width:auto;
+  padding: 5px 15px;
+  margin-left: 5px;
   margin-right: 5px;
 }
 
 footer {
-      display:grid;
-      width: auto;
-   padding: 5px 15px;
-      text-align: right;
-  margin-left: 5px;
-  margin-right: 5px;
+  display: grid;
+  width: auto;
+  padding: 5px 5px;
+  text-align: left;
+  background-color: #404CB2;
+  color: #FFD84F;
+  
 }
+
+.carousel-inner > .item > img {
+    margin: 0 auto;
+}
+
+
+header div#logoText {
+	float: right;
+	padding-top: 25px;
+}
+
+
+
+
 
